# safaribooks

./: .dockerignore  .env  .gitignore  Coppin fandom  Deezer.io  Dockerfile  Pipfile  README.md  Vagrantfile  bulk_downloader.sh  convert_name.sh  detailed_cookies.py  docker-compose.yml  download.py  entrypoint.sh  import_cookies.py  login.py  override_v1.css  provision.sh  pyproject.toml  register_user.py  requirements.txt  safaribooks.py  safaribooks.py.bak  setup.py  sso_cookies.py
extra/: Dockerfile  run.sh
safaribooks/: __version__.py  safaribooks.py
safaribooks/core/: safaribooks.py
